# ai-coded-graph-recognition-test

./: .gitignore  CLAUDE.md  Makefile  README.md  README_ja.md  main.cpp  main_at.cpp
docs/: Doxyfile  conf.py  index.rst  python.rst  usage.rst
include/: at_free.h  bipartite.h  bipartite_permutation.h  block.h  cactus.h  chain.h  chordal.h  chordal_bipartite.h  chordal_bipartite_v2.h  chordal_enum.h  circular_arc.h  clique.h  clique_v2.h  co_chordal.h  co_comparability.h  co_interval.h  cochain.h  cograph.h  comparability.h  distance_hereditary.h  distance_hereditary_v2.h  dsu.h  graph.h  interval.h  interval_v2.h  mcs.h  minor.h  outer_planar.h  permutation.h  permutation_v2.h  planar.h  proper_interval.h  ptolemaic.h  quasi_threshold.h  series_parallel.h  split.h  strongly_chordal.h  threshold.h  trapezoid.h  trivially_perfect.h  (+2 more)
python/: README.md  README_ja.md  pyproject.toml  setup.py
python/src/graph_recognition/: __init__.py  _bindings.cpp  _networkx.py  _types.py  _validation.py
python/tests/: conftest.py  test_algorithms.py  test_basic.py  test_networkx.py  test_validation.py
src/: at_free_main.cpp  bipartite_main.cpp  bipartite_permutation_main.cpp  block_main.cpp  cactus_main.cpp  chain_main.cpp  chordal_bipartite_main.cpp  chordal_bipartite_v2_main.cpp  chordal_enum_main.cpp  chordal_main.cpp  circular_arc_main.cpp  co_chordal_main.cpp  co_comparability_main.cpp  co_interval_main.cpp  cochain_main.cpp  cograph_main.cpp  comparability_main.cpp  distance_hereditary_main.cpp  distance_hereditary_v2_main.cpp  interval_main.cpp  interval_v2_main.cpp  (+16 more)
(+86 files in other folders)
