[build-system]
requires = ["setuptools>=45", "pybind11>=2.10"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-recognition"
version = "0.1.0"
description = "Graph class recognition algorithms"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
networkx = ["networkx>=2.6"]
dev = ["pytest>=7.0", "networkx>=2.6"]

[tool.setuptools.packages.find]
where = ["src"]
